Moved to @paypal/checkout-server-sdk

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,8 +6,8 @@
 <title>PayPal Node App</title>
     </head>
     <body>
-        <h1>Red Hat</h1>
-        <h2>Buy For $299</h2>
+        <h1>Pay for product</h1>
+        <h2>Buy For $400</h2>
         <form action="/pay" method="post">
             <input type="submit" value="Buy">
             </form>
